<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    android:orientation="horizontal">

    <Button
        android:id="@+id/menuLogoutButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="#0000"
        android:fontFamily="casual"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuGlobalRankingButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuStartButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:background="#0000"
        android:fontFamily="casual"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuLocalRankingButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="#0000"
        android:fontFamily="casual"
        android:text="@string/ranking"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuStartButton" />

    <Button
        android:id="@+id/menuGlobalRankingButton"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="#0000"
        android:fontFamily="casual"
        android:text="@string/global_ranking"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuLocalRankingButton" />

</androidx.constraintlayout.widget.ConstraintLayout>